selfhost/test/typechecker/bindingdecl_error_unknown_type.out
Error at %FILE_NAME%:1:8
Unknown type 'Foobar'
  |  val a: Foobar = 123
            ^
No type with that name is visible in current scope
