selfhost/test/typechecker/bindingdecl_error_unknown_type.abra
val a: Foobar = 123